2010-05-10  Alan McGovern  <amcgovern@novell.com>

	* BindingExpression.cs:
	* BindingOperations.cs:
	* BindingExpressionBase.cs: Move the Expression handling code
	  from FrameworkElement to DependencyObject so that we can
	  support the new SL4 databinding capabilities.

	* PropertyPathWalker.cs: If the property path is null or empty
	  we still need to use a CollectionViewNode so we can handle
	  cases where the source of your binding is an ICollectionView
	  object and no path has been specified.

2010-05-10  Alan McGovern  <amcgovern@novell.com>

	* CollectionViewNode.cs: Don't try to access the view if it's
	  null.

2010-05-10  Alan McGovern  <amcgovern@novell.com>

	* CollectionViewSource.cs: If the view is null there's no need
	  to refresh. Fixes a null deref in drt 232.

2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* PropertyPathWalker.cs:
	* CollectionViewNode.cs: Fix how we handle binding to
	  properties which exist on ICollectionView so that it doesn't
	  break BindsDirectlyToSource. yada yada drt 232 works better.


2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Add support for IEditableObject
	  which fixes yet more of drt 232.

2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* GroupEnumerator.cs:
	* StandardCollectionView.cs: Add support for enumerating over
	  the Groups if the CollectionView has been grouped.

2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Implement support for 'Remove'
	  and 'RemoveAt'. Fixes another drt 232 subtest.

2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* StandardCollectionView.cs: Implement IEditableCollectionView
	  on StandardCollectionView and add a bunch of tests covering
	  the implementation. drt 232 gets even further now!

2010-05-07  Alan McGovern  <amcgovern@novell.com>

	* INPCProperty.cs: Add a helper class to simplify implementing
	  INotifyPropertyChanged class.
